Refactoring boards
